<resources>
    <string name="app_name">Kopigo</string>

    <!-- Login Activity -->
    <string name="login.welcome">w e l c o m e</string>
    <string name="login.username">Username</string>
    <string name="login.password">Password</string>
    <string name="login.sign_in">Sign in</string>
    <string name="login.forgot_password">forgot password? click here</string>
    <string name="login.copyright">KOPIGOAPPS &#169; 2017 - All right reserved</string>
    <string name="login.tnc">Terms and Condition and Privacy Policy</string>

    <!-- Main Activity -->
    <string name="order">order</string>
    <string name="main.stock">stock</string>
    <string name="main.manual">manual</string>
    <string name="main.promo">promo</string>
    <string name="main.sales_report">sales report</string>
    <string name="login.login_success">Login Success</string>
    <string name="login.error_username">Username must be filled</string>
    <string name="login.error_password">Password must be filled</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="summary">Summary</string>


    <string name="summary.add_more_item">Add More Item</string>
    <string name="summary_payment_details">Payment Details</string>
    <string name="summary_checkout">checkout</string>
    <string name="summary.total_price">TOTAL PRICE</string>
    <string name="summary.print_out">Print Out</string>
    <string name="summary.order">Order</string>
    <string name="summary.cancel">Cancel</string>
    <string name="summary.items">Items</string>
    <string name="summary.request">Request</string>
    <string name="list_device">Select Device</string>
    <string name="scan_device">Scanning Device</string>
    <string name="other_device">Other Device</string>
    <string name="no_device_found">No paired device found</string>
    <string name="not_connected">Not connected to target device</string>
    <string name="jumlah_yang_dibayar">Jumlah yang dibayar</string>


</resources>
