<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_summary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_large"
            android:text="@string/list_device"/>
        <TextView
            android:id="@+id/textNoDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/text_medium"
            android:text="@string/no_device_found"
            android:visibility="gone"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvPairedDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginBottom="@dimen/medium_space"/>

        <Button
            android:id="@+id/buttonScan"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/selector_button_green"
            android:text="@string/scan_device"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/medium_space"
            android:text="@string/other_device"/>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="gone"
            android:layout_gravity="center"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvNewDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>