<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            style="@style/summary_black_header"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
       <!-- <Button
            android:id="@+id/buttonAdd"
            android:layout_width="@dimen/summary_button"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/small_space"
            android:drawableLeft="@drawable/ic_add_white_24dp"
            android:padding="@dimen/medium_space"
            android:text="@string/summary.add_more_item"
            style="@style/Widget.AppCompat.Button.Colored"/>-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_space"
            android:text="@string/summary_payment_details"
            style="@style/summary_black_header"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/buttonCheckout"
            android:layout_width="@dimen/summary_button"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/medium_space"
            android:padding="@dimen/medium_space"
            android:text="@string/summary_checkout"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>